[metadata]
version = 3.0.1
description = spaCy pipeline component for adding emoji meta data to Doc, Token and Span objects
url = https://github.com/explosion/spacymoji
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    spacy>=3.0.0,<4.0.0
    emoji>=0.4.5,<1.0.0

[options.entry_points]
spacy_factories =
    emoji = spacymoji:create_emoji

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__
